add jsp support

--- a/Spring-Boot Demo/wap/src/main/resources/application.properties
+++ b/Spring-Boot Demo/wap/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 ﻿# Main
 spring.main.banner-mode=off
 
-#thymeleaf
+# jsp
+#spring.mvc.static-path-pattern =/static/**
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
+
+# thymeleaf
 #spring.thymeleaf.mode=LEGACYHTML5
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.content-type=text/html
